--- a/scrapbook.Rmd
+++ b/scrapbook.Rmd
@@ -91,3 +91,25 @@ a <- tryCatch(
 )
 ```
 
+```{r}
+scrape_info <- function(t){
+    tmp <- read_html(glue("http://www.nasdaq.com/symbol/{tolower(t)}")) %>% 
+      html_nodes("#left-column-div div p")
+    return(html_table(tmp, fill=TRUE)[[1]])
+}
+df <- scrape_info("pypl")
+out <- data.frame(c("a","b"),c("d","e"))
+out <- rbind(out, c("a", "b"))
+out <- rbind(out, c("1Y Target", df$X2[2]))
+out <- rbind(out, c("50D avg vol", df$X2[5]))
+out <- rbind(out, c("Market cap", df$X2[8]))
+out <- rbind(out, c("P/E ratio", df$X2[9]))
+out <- rbind(out, c("EPS", df$X2[11]))
+out <- rbind(out, c("Beta", df$X2[16]))
+out <- data.frame(c("1Y Target","50D avg vol","Market cap","P/E ratio","EPS","Beta"), c(df$X2[2],df$X2[5],df$X2[8],df$X2[9],df$X2[11],df$X2[16]))
+colnames(out)=c("name", "value")
+View(out)
+html_text(tmp)[2]
+
+```
+
